--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 h1 {
   color: green;
 }
@@ -7,7 +8,20 @@ header {
 }
 
 .navbar-brand {
-  color: orange;
+  color: #07a8ed !important; /* màu xanh lá dịu mắt */
+  font-weight: bold;
+  font-size: 1.3rem;
+  text-decoration: none;
+}
+
+.user-avatar {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+}
+
+.card {
+  margin-bottom: 20px;
 }
 
 /*# sourceMappingURL=app.css.map */
