--- a/src/resource/views/partials/header.handlebars
+++ b/src/resource/views/partials/header.handlebars
@@ -1,35 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">V with NodeJs</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/courses/create">Đăng khóa học</a>
-      </li>
-      {{!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li> --}}
-      <li class="nav-item">
-        <a class="nav-link disabled">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+  <div class="container">
+    <a class="navbar-brand" href="/">Lập trình cùng V</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          <img src="https://scontent.fhan2-4.fna.fbcdn.net/v/t39.30808-1/465029037_617709913914829_153345864392292340_n.jpg?stp=cp0_dst-jpg_s40x40_tt6&_nc_cat=100&ccb=1-7&_nc_sid=28885b&_nc_eui2=AeFJNdYIUQMti5ezuGLlGLO5fILrnitJV7d8guueK0lXt5WmBtuOiWFt3_XdiAe0EL5dTuo4NVtOVncPXfF4Fwsv&_nc_ohc=Sl7C98Zuo8oQ7kNvwGx-_Cq&_nc_oc=AdkEs3zpT78uexWm50wy8YvUaLebpwrPVCTWdIRHha_x8I17DwnYw9vKpyqhxTS7vZE&_nc_zt=24&_nc_ht=scontent.fhan2-4.fna&_nc_gid=Lr8wi3Q3Wr7JQjqyEwBUJg&oh=00_AfSf-zpelsWEYPCqvcX-CjFRpCREe7AbxobvF5VpXixx3w&oe=6888D8C2" class="user-avatar">
+            Hoàng Hà
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="/courses/create">Đăng khóa học</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/me/stored/courses">Khóa học của tôi</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Đăng xuất</a>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
